--- a/index.html
+++ b/index.html
@@ -104,8 +104,7 @@
           <th class="functionName" width="45%">Customer Reviews</th>
         </thead>
         <tr>
-          <td id="map" align="center">
-            Map       
+          <td id="map" align="center">    
 
           </td>
           <td>&nbsp;</td>
@@ -132,8 +131,14 @@
       function initMap() {
         map = new google.maps.Map(document.getElementById('map'), {
           center: {lat: 40.8054491, lng: -73.9654415},
-          zoom: 8
+           zoom: 10,
+    scrollwheel: false
         });
+          var marker = new google.maps.Marker({
+    position: {lat: 40.8054491, lng: -73.9654415},
+    map: map,
+    title: 'Monks Café'
+  });
       }
     </script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB1IECGVuRj5G2-_qWR-uNaVRxKq1-5w_A&callback=initMap"
